Increase server view distance to 15
Signed-off-by: Ashcon Partovi <ashcon@partovi.net>

--- a/src/main/jib/server/server.properties
+++ b/src/main/jib/server/server.properties
@@ -27,5 +27,8 @@ allow-flight=true
 # Reduce world size to avoid memory exhaustion
 max-world-size=10000
 
+# Increase view distance for PvP maps
+view-distance=15
+
 # Do not send diagnostics to Mojang
 snooper-enabled=false
