Use deploy/ folder for default server files
Signed-off-by: Ashcon Partovi <ashcon@partovi.net>

--- a/pom.xml
+++ b/pom.xml
@@ -270,6 +270,9 @@
                         </volumes>
                         <workingDirectory>/server</workingDirectory>
                     </container>
+                    <extraDirectories>
+                        <paths>deploy</paths>
+                    </extraDirectories>
                 </configuration>
             </plugin>
         </plugins>
