--- a/pom.xml
+++ b/pom.xml
@@ -25,24 +25,13 @@
             <groupId>app.ashcon</groupId>
             <artifactId>sportpaper</artifactId>
             <version>1.8.8-R0.1-SNAPSHOT</version>
+            <scope>provided</scope>
         </dependency>
         <!-- Command framework for developing simple commands -->
         <dependency>
             <groupId>app.ashcon.intake</groupId>
             <artifactId>intake-bukkit</artifactId>
             <version>1.1-SNAPSHOT</version>
-        </dependency>
-        <!-- Guava libraries that *must* match version used in SportPaper -->
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>17.0</version>
-        </dependency>
-        <!-- YAML parsing library that *must* match version used in SportPaper -->
-        <dependency>
-            <groupId>org.yaml</groupId>
-            <artifactId>snakeyaml</artifactId>
-            <version>1.15</version>
         </dependency>
         <!-- Time convience libraries for "Instant" and "Duration" -->
         <!-- TODO: Use Java 8's standard time libraries -->
@@ -139,14 +128,9 @@
                     <minimizeJar>true</minimizeJar>
                     <artifactSet>
                         <excludes>
-                            <exclude>app.ashcon:sportpaper:jar:*</exclude>
                             <exclude>app.ashcon.intake:intake-core:jar:*</exclude>
                             <exclude>com.google.code.findbugs:jsr305:jar:*</exclude>
                         </excludes>
-                        <includes>
-                            <!-- Raven depends on this and does not shade it, so we have to -->
-                            <include>com.fasterxml.jackson.core:jackson-core</include>
-                        </includes>
                     </artifactSet>
                 </configuration>
                 <executions>
