Fix auxiliary plugins from not loading
Signed-off-by: Ashcon Partovi <ashcon@partovi.net>

--- a/deploy/server/server.properties
+++ b/deploy/server/server.properties
@@ -4,6 +4,9 @@ port=25565
 motd=\u00A7a\u00BB \u00A7bPvP Game Manager \u00A7a\u00AB
 max-players=100
 
+# Netty is not compatible with Java 9 and above
+use-native-transport=false
+
 # Network settings that must change when using Bungee
 network-compression-threshold=256
 online-mode=true
@@ -27,7 +30,7 @@ allow-flight=true
 # Reduce world size to avoid memory exhaustion
 max-world-size=10000
 
-# Increase view distance for PvP maps
+# Increase view distance for PvP mapss
 view-distance=15
 
 # Do not send diagnostics to Mojang
