Change restart limits to 15 matches or 3 hours
Signed-off-by: Ashcon Partovi <ashcon@partovi.net>

--- a/deploy/server/server.properties
+++ b/deploy/server/server.properties
@@ -1,7 +1,7 @@
 # Identity information about the server
 server-ip=0.0.0.0
 port=25565
-motd=\u00A7a\u00BB \u00A7bPvP Game Manager \u00A7a\u00AB
+motd=A Minecraft PvP Server
 max-players=100
 
 # Netty is not compatible with Java 9 and above
