Move world container to matches directory
Signed-off-by: TheMolkaPL <themolkapl@gmail.com>

--- a/deploy/server/sportpaper.yml
+++ b/deploy/server/sportpaper.yml
@@ -6,6 +6,8 @@ bukkit:
     connection-throttle: -1
     # Changed from 'Server stopped'
     shutdown-message: Server restarting
+    # Move world container from root to matches directory
+    world-container: './matches'
   chunk-gc:
     # Disable garbage collection of chunks
     period-in-ticks: 0
