--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -14,6 +14,9 @@ map:
     enabled: true
     reload-when-error: false
 
+rotations:
+  path: rotations.yml
+
 restart:
   enabled: true
   uptime: 3h
