Add a delay to 1.13 auto completion
Signed-off-by: Brottweiler <brottsie@gmail.com>
Signed-off-by: BGM <bgmp00@protonmail.com>

--- a/deploy/server/plugins/ViaVersion/config.yml
+++ b/deploy/server/plugins/ViaVersion/config.yml
@@ -4,11 +4,11 @@ checkforupdates: false
 # Send supported protocol versions in pings
 send-supported-versions: true
 
-# Fix shift + double click not working when moving items 
+# Fix shift + double click not working when moving items
 quick-move-action-fix: true
 
 # Disable 1.13+ tab autocomplete issues
-disable-1_13-auto-complete: true
+1_13-tab-complete-delay: 10
 
 # Fix 1.13+ clients getting stuck in snow
 fix-low-snow-collision: true
