Make rotation's player count equation less cryptic & stop using PGM.GLOBAL
Signed-off-by: BGM <bgmp00@protonmail.com>

--- a/src/main/resources/rotations.yml
+++ b/src/main/resources/rotations.yml
@@ -9,7 +9,7 @@
 default:
   enabled: true
   players: 1
-  position: 0                 # This helps the server resume rotations in the position they were before a server shutdown/restart
+  next_map: Harb                 # This helps the server resume rotations in the position they were before a server shutdown/restart
   maps:
     - Airship Battle
     - Harb
