Add support for rotations
Signed-off-by: BGM <bgmp00@protonmail.com>

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -14,6 +14,10 @@ map:
     enabled: true
     reload-when-error: false
 
+rotations:
+  enabled: true
+  path: rotations.yml
+
 restart:
   enabled: true
   uptime: 3h
