Refactor Flair to Prefix
Signed-off-by: Meeples10 <8867705+Meeples10@users.noreply.github.com>

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -95,11 +95,11 @@ motd:
 groups:
   admin:
     priority: 1
-    flair:
+    prefix:
       symbol: ❖
       color: gold
   mod:
     priority: 2
-    flair:
+    prefix:
       symbol: ❖
       color: red
