Start working on map pools
Signed-off-by: Pablete1234 <pabloherrerapalacio@gmail.com>

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -14,9 +14,9 @@ map:
     enabled: true
     reload-when-error: false
 
-rotations:
+map-pools:
   enabled: true
-  path: rotations.yml
+  path: map-pools.yml
 
 restart:
   enabled: true
