Fix ops having all defined prefixes
Signed-off-by: Ashcon Partovi <ashcon@partovi.net>

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -94,12 +94,8 @@ motd:
 
 groups:
   admin:
-    priority: 1
+    op: true
+    priority: 10
     prefix:
       symbol: ❖
       color: gold
-  mod:
-    priority: 2
-    prefix:
-      symbol: ❖
-      color: red
