Add experiment options for performance tests
Signed-off-by: Pablete1234 <pabloherrerapalacio@gmail.com>

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -99,3 +99,13 @@ groups:
     prefix:
       symbol: ❖
       color: gold
+
+experiments:
+  # In seconds, when cycle reaches this number it will preload next match & world
+  preload-matches: 3
+  # Avoid twice tp on cycle (once to world spawn, later to obs spawn)
+  avoid-double-teleport: true
+  # Defer tab rendering to group more updates at once, in ticks
+  tab-render-delay: 5
+  # Ticks to wait to destroy older match
+  destroy-match-delay: 100
