Implement custom sidebar messages
Signed-off-by: Meeples10 <8867705+Meeples10@users.noreply.github.com>

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -109,3 +109,11 @@ experiments:
   tab-render-delay: 5
   # Ticks to wait to destroy older match
   destroy-match-delay: 100
+
+sidebar:
+  # Text may be formatted with '&'
+  # Leave blank to disable
+  top: ""
+  bottom: ""
+  # If the sidebar message should overwrite lines in the sidebar when it is full
+  overwrite: false
