Add option for gaps between sidebar messages and objectives
Signed-off-by: Meeples10 <8867705+Meeples10@users.noreply.github.com>

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -111,9 +111,13 @@ experiments:
   destroy-match-delay: 100
 
 sidebar:
-  # Text may be formatted with '&'
+  # Messages may be formatted with '&'
   # Leave blank to disable
   top: ""
   bottom: ""
+  # If there should be a one-line gap between the messages and objectives
+  # Has no effect if the corresponding message is blank
+  gap-top: true
+  gap-bottom: true
   # If the sidebar message should overwrite lines in the sidebar when it is full
   overwrite: false
