Add option for gaps between sidebar messages and objectives (#203)
Signed-off-by: Meeples10 <8867705+Meeples10@users.noreply.github.com>

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -111,7 +111,7 @@ experiments:
   destroy-match-delay: 100
 
 sidebar:
-  # Text may be formatted with '&'
+  # Messages may be formatted with '&'
   # Leave blank to disable
   top: ""
   bottom: ""
