--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,10 @@
             <id>ashcon-app</id>
             <url>https://repo.ashcon.app/content/repositories/snapshots</url>
         </repository>
+        <repository>
+            <id>viaversion-repo</id>
+            <url>https://repo.viaversion.com</url>
+        </repository>
     </repositories>
     <distributionManagement>
         <repository>
@@ -77,6 +81,11 @@
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
             <version>3.28.0</version>
+        </dependency>
+        <dependency>
+            <groupId>us.myles</groupId>
+            <artifactId>viaversion</artifactId>
+            <version>2.2.2</version>
         </dependency>
     </dependencies>
     <build>
