--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -96,14 +96,10 @@ groups:
       color: gold
 
 experiments:
-  # In seconds, when cycle reaches this number it will preload next match & world
-  preload-matches: 3
-  # Avoid twice tp on cycle (once to world spawn, later to obs spawn)
-  avoid-double-teleport: true
-  # Defer tab rendering to group more updates at once, in ticks
-  tab-render-delay: 5
-  # Ticks to wait to destroy older match
-  destroy-match-delay: 100
+  match-preload-seconds: 10 # Number of seconds to pre-load a match and its world before cycle
+  match-destroy-seconds: 10 # Number of seconds to wait before unloading a world after the match has unloaded
+  match-teleports-per-second: 10 # Number of players to teleport per second to a new match on cycle
+  tab-render-ticks: 10 # Number of ticks before invalidating the tab list
 
 sidebar:
   # Messages may be formatted with '&'
