--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,12 +1,8 @@
 name: build
 on:
   push:
-    branches:
-      - master
   pull_request:
   repository_dispatch:
-  schedule:
-    - cron: 0 1 * * *
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -17,24 +13,5 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
-    - name: version
-      run: |
-        mvn versions:set \
-          -DnewVersion=1.8-SNAPSHOT-${GITHUB_REF#refs/heads/}-${GITHUB_SHA::8}
-    - name: nexus
-      if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/beta'
-      run: mvn -U deploy -s settings.xml
-      env:
-        NEXUS_USERNAME: ${{ secrets.NEXUS_USERNAME }}
-        NEXUS_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}
-    - name: install
-      if: github.ref != 'refs/heads/master' && github.ref != 'refs/heads/beta'
+    - name: build
       run: mvn -U install
-    - name: docker
-      if: success() && github.ref == 'refs/heads/master'
-      run: |
-        mvn compile jib:build \
-          -Djib.to.auth.username=${{ secrets.DOCKER_USERNAME }} \
-          -Djib.to.auth.password=${{ secrets.DOCKER_PASSWORD }} \
-          -Djib.to.image=${{ secrets.DOCKER_IMAGE }} \
-          -Djib.to.tags=latest,$(date +%F)
