--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,7 @@ jobs:
       with:
         java-version: 1.8
     - name: version
+      if: github.ref != '/refs/heads/master'
       run: |
         mvn versions:set \
           -DnewVersion=1.8-${GITHUB_REF#refs/heads/}-SNAPSHOT
