Add JDA as dependency
Signed-off-by: Vlad <me@vladyslav.xyz>

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,11 @@
             <id>viaversion-repo</id>
             <url>https://repo.viaversion.com</url>
         </repository>
+        <repository>
+            <id>jcenter</id>
+            <name>jcenter-bintray</name>
+            <url>https://jcenter.bintray.com</url>
+        </repository>
     </repositories>
     <distributionManagement>
         <repository>
@@ -87,6 +92,18 @@
             <artifactId>viaversion</artifactId>
             <version>2.2.2</version>
             <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>net.dv8tion</groupId>
+            <artifactId>JDA</artifactId>
+            <version>4.1.1_104</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>club.minnced</groupId>
+                    <artifactId>opus-java</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
     <build>
