--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -109,3 +109,11 @@ sidebar:
   bottom: ""
   # If the sidebar message should overwrite lines in the sidebar when it is full
   overwrite: false
+
+discord:
+  # Enable Discord Integration
+   enabled: false
+  # Discord Token
+   token: ""
+  # Guild ID of your server
+   guild: ""
