WIP: Prototype verification system
Signed-off-by: Ashcon Partovi <ashcon@partovi.net>

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -110,10 +110,5 @@ sidebar:
   # If the sidebar message should overwrite lines in the sidebar when it is full
   overwrite: false
 
-discord:
-  # Enable Discord Integration
-   enabled: false
-  # Discord Token
-   token: ""
-  # Guild ID of your server
-   guild: ""
+# discord:
+#   token: <insert-token-here>
