--- a/server/pom.xml
+++ b/server/pom.xml
@@ -17,22 +17,52 @@
             <artifactId>core</artifactId>
             <version>1.8-SNAPSHOT</version>
         </dependency>
+
+        <!-- Codec library for supporting proxy protocol -->
+        <!-- FIXME: Properly filter classes so only haproxy codec is included -->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-codec-haproxy</artifactId>
+            <version>4.0.29.Final</version>
+        </dependency>
+
+        <!-- Older version of log4j logging library that barely works -->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.12</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>3.2.1</version>
+                <version>3.2.2</version>
                 <configuration>
                     <createDependencyReducedPom>false</createDependencyReducedPom>
-                    <minimizeJar>true</minimizeJar>
+                    <!-- Ensures that all classes are loaded into the jar -->
+                    <minimizeJar>false</minimizeJar>
                     <artifactSet>
-                        <includes>
-                            <include>app.ashcon:sportpaper:*</include>
-                            <include>tc.oc:core:*</include>
-                        </includes>
+                        <excludes>
+                            <exclude>tc.oc:util:*</exclude>
+                            <exclude>tc.oc:bukkit:*</exclude>
+                            <exclude>app.ashcon.intake:intake-bukkit:*</exclude>
+                            <exclude>com.google.guava:guava:*</exclude>
+                            <exclude>com.google.code.findbugs:annotations:*</exclude>
+                            <exclude>net.sf.trove4j:trove4j:*</exclude>
+                            <exclude>org.xerial:sqlite-jdbc:*</exclude>
+                            <exclude>joda-time:joda-time:*</exclude>
+                        </excludes>
                     </artifactSet>
+                    <filters>
+                        <filter>
+                            <artifact>tc.oc:core:*</artifact>
+                            <excludes>
+                                <exclude>org/jdom2/**</exclude>
+                            </excludes>
+                        </filter>
+                    </filters>
                 </configuration>
                 <executions>
                     <execution>
@@ -53,7 +83,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>tc.oc.pgm.server.PGMServer</mainClass>
+                            <mainClass>tc.oc.util.bukkit.server.BukkitServer</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
@@ -65,11 +95,11 @@
                 <version>1.8</version>
                 <executions>
                     <execution>
-                        <phase>generate-resources</phase>
+                        <phase>install</phase>
                         <configuration>
-                            <tasks>
-                                <mkdir dir="${basedir}/target/server/"/>
-                            </tasks>
+                            <target>
+                                <copy file="${basedir}/target/${project.build.finalName}.jar" tofile="../target/PGM-Server.jar"/>
+                            </target>
                         </configuration>
                         <goals>
                             <goal>run</goal>
@@ -82,7 +112,7 @@
             <plugin>
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>jib-maven-plugin</artifactId>
-                <version>1.6.1</version>
+                <version>2.0.0</version>
                 <configuration>
                     <from>
                         <image>shipilev/openjdk-shenandoah:8</image>
