--- a/server/src/main/jib/server/server.properties
+++ b/server/src/main/jib/server/server.properties
@@ -1,11 +1,11 @@
 # Identity information about the server
 server-ip=0.0.0.0
 port=25565
-motd=A Minecraft PvP Server
+motd=A PGM PvP Server
 max-players=100
 
 # Netty is not compatible with Java 9 and above
-use-native-transport=false
+use-native-transport=true
 
 # Network settings that must change when using Bungee
 network-compression-threshold=256
@@ -30,7 +30,7 @@ allow-flight=true
 # Reduce world size to avoid memory exhaustion
 max-world-size=10000
 
-# Increase view distance for PvP mapss
+# Increase view distance for PvP maps
 view-distance=15
 
 # Do not send diagnostics to Mojang
